fixed container spacing and borders for all pages

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
   float:left;
   width:100%;
   position: relative;
+  border-bottom:3px solid rgb(135, 135, 135);
+  border-top:3px solid rgb(135, 135, 135);
 }
 
 #navbar ul{
@@ -61,7 +63,6 @@ body{
 #mainHeading{
   text-align:center;
   font-family:sans-serif;
-
   transition: transform 500ms ease;
 }
 
@@ -73,13 +74,15 @@ body{
   padding:1em;
   border:5px solid;
   margin-top:10px;
+  margin-left:150px;
+  margin-right:150px;
 }
 
 #resumeContactDetails{
   text-align:center;
   font-size:20px;
   font-family:sans-serif;
-  border-bottom:solid;
+  border-bottom:solid 5px;
   margin:0;
 }
 
@@ -93,6 +96,8 @@ body{
   border:10px solid;
   padding:10px;
   margin-top:10px;  
+  margin-left:150px;
+  margin-right:150px;
 }
 
 ::-webkit-scrollbar {
